--- a/DatabaseIndexSandboxTest/DatabaseIndexSandboxTest.csproj
+++ b/DatabaseIndexSandboxTest/DatabaseIndexSandboxTest.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentAssertions" Version="6.8.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
@@ -29,10 +30,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="Postgres\Config\config.json">
+    <None Update="Config\config.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Update="Postgres\Config\DatabaseSetup.sql">
+    <None Update="Setup\DatabaseSetup.sql">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
