--- a/DatabaseIndexSandbox/DatabaseIndexSandbox.csproj
+++ b/DatabaseIndexSandbox/DatabaseIndexSandbox.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="7.0.1" />
     <PackageReference Include="Npgsql" Version="7.0.0" />
   </ItemGroup>
 
